 * BRISS. If not, see http://www.gnu.org/licenses/.
 */
################################################
CHANGELOG  - BRISS  
################################################

* 0.0.13 (To be released) 
 * Added possibility to reload pdfs for using other excluded pages while
 	retaining crop rectangles
 * Included Import/Export capability for comming batch mode

* 0.0.12 (release 11.01.2010)
 * Added Icon (thx to joão ziliotto)
 * Reworked the GUI
 * updated iText and JPedal libraries
 * included a preview button

* 0.0.11 (release 10.10.2010)
 * Exclude pages from merging
 * Merged blocks are now sorted according to their lowest page number
 * Faster scrolling (mouse)
 * Fixed an issue where huge pages would cause BRISS to crash

* 0.0.10 (release 01.10.2010)
 * fixed issure where a trim or bleed box would influence the cropping behaviour
 * smaller file size through newer libraries
 	* itext
 	* jpedal 

* 0.0.9 (released 08.06.2010)
 * Maximal pageheight of preview image is set to 600pixel
 * last directory is being remembered 

* 0.0.8 (released 17.03.2010)
 * Fixed a bug where bookmarks got lost during crop-transformation

* 0.0.7 (released 15.03.2010)
 * Meta information is copied to the cropped file
 * Small visual fix in progress bar
 * Ghost rectangle shows the size of the last drawn crop rectangle (for people who want to have equally sized pages)
 * Dragging of crop rectangles (press and hold the mouse button inside a crop rectangle)
 * Single removal of crop rectangles by pressing the right mouse button inside the rectangle to be deleted
 * Selected crop rectangles (=>ctrl+left mouse click into the rectangle) can be sized to the maximum of all selected widths/heights.

* 0.0.6 (released 13.05.2010)
 * Added multiple column support (actually it's a multiple rectangle capability)
 * Integrated a small description how to use the software.

* 0.0.5 (released 12.05.2010)